# career-forge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
.devcontainer/: .env.devcontainer.example  Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  postCreate.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
client/: .dockerignore  .gitignore  CHANGES.md  Dockerfile  README.md  SETUP_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/__tests__/: App.test.js  App.test.tsx  i18n.test.tsx
client/__tests__/components/: AuthModal.test.tsx  DateRangeInput.test.tsx  GdprBanner.test.tsx  KeywordMatcher.test.tsx  LanguageLevel.test.tsx  ToolbarDropdown.test.tsx
client/__tests__/helpers/: renderWithProviders.tsx
client/__tests__/services/: api.test.ts
client/public/: index.html
client/scripts/: require-pnpm.cjs
client/src/: App.css  App.js  App.tsx  fonts.js  i18n.js  i18n.tsx  index.css  index.js  index.tsx  setupTests.ts
client/src/app/: App.tsx  AppProviders.tsx  AppRoutes.tsx  routeGuards.tsx
client/src/components/: AccountSettings.js  AccountSettings.tsx  AuthModal.js  AuthModal.tsx  CLToolbar.js  CLToolbar.test.ts  CLToolbar.tsx  CVPagesEditor.css  CVPagesEditor.js  CVPagesEditor.tsx  CentralToolbar.css  CentralToolbar.js  CentralToolbar.test.ts  CentralToolbar.tsx  CoverLetterEditor.css  CoverLetterEditor.js  CoverLetterEditor.tsx  DocumentDashboard.css  DocumentDashboard.js  DocumentDashboard.tsx  DocumentPage.css  DocumentPage.tsx  EditableText.js  EditableText.tsx  GdprBanner.css  GdprBanner.js  GdprBanner.tsx  GlobalHeader.css  GlobalHeader.js  GlobalHeader.tsx  HomePage.css  HomePage.js  HomePage.tsx  ImageCropperModal.js  ImageCropperModal.tsx  KeywordMatcher.js  KeywordMatcher.tsx  LanguageLevel.js  LanguageLevel.tsx  LanguageSwitcher.js  (+32 more)
client/src/components/MainContent/: DateRangeInput.js  DateRangeInput.tsx  EditableText.tsx  LanguageLevel.js  LanguageLevel.tsx  MainContent.js  MainContent.tsx  SocialIconPicker.js  SocialIconPicker.tsx  SocialLinkEditor.js  SocialLinkEditor.tsx
client/src/components/Sidebar/: Sidebar.js  Sidebar.tsx
client/src/config/: features.js  features.ts
client/src/contexts/: AppStateContext.js  AppStateContext.tsx  AuthContext.js  AuthContext.tsx  PageContext.js  PageContext.tsx  ThemeContext.js  ThemeContext.tsx  UndoContext.js  UndoContext.tsx
client/src/data/: initialData.js  initialData.ts  templates.js  templates.ts
client/src/features/editor/: CVEditor.tsx
client/src/features/editor/hooks/: appearanceReset.test.ts  appearanceReset.ts  importPayload.test.ts  importPayload.ts  useDocumentTitle.ts  useEditorDocumentLifecycle.ts  useImportExport.ts  useProfileImageHandlers.ts  useResumeText.ts
client/src/locales/: de.json  en.json
client/src/pages/: DashboardWrapper.tsx  HomePageWrapper.tsx  PasswordResetPage.tsx  SharedDocumentViewer.tsx  TemplatesGalleryWrapper.tsx
client/src/services/: api.js  api.ts
client/src/types/: index.ts
client/src/utils/: decodeData.ts  editableFormatting.test.ts  editableFormatting.ts  editableHtml.test.ts  editableHtml.ts  filenames.test.ts  filenames.ts
docs/: README.md  api-reference.md  architecture.md  client-setup.md  database.md  deployment.md  frontend.md  security.md  server-setup.md  templates-and-theming.md
scripts/: verify-local.sh  write_dashboard.py  write_dashboard_css.py
server/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 6104f6581867_add_profile_image_to_cv.py  a1b2c3d4e5f6_add_versions_and_sharing.py  ac7b3eec10fe_baseline_existing_schema.py  b2d4e8f1a039_rename_cvs_table_to_documents.py  e3a1f92b8c04_cvs_jsonb_and_document_type.py  f7a2b3c4d5e6_add_linked_resume_id.py
server/app/: audit.py  auth.py  bootstrap.py  config.py  database.py  email.py  lifecycle.py  main.py  models.py  schemas.py  security.py
server/app/repositories/: __init__.py  document_versions.py  documents.py  refresh_tokens.py  users.py
server/app/routes/: auth.py  documents.py  public.py
server/app/security_layers/: __init__.py  account_lockout.py  csrf.py  middleware.py  rate_limit.py  sanitization.py
server/app/services/: __init__.py  auth_service.py  document_service.py  profile_images.py
server/scripts/: backup_database.sh  check_production.sh  insert_demo_documents.py  make_admin.py  seed_sample_data.py  setup_postgres.sh
server/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_auth_extended.py  test_documents.py  test_documents_extended.py  test_main.py  test_security.py
