[project]
name = "career-forge-server"
version = "1.0.0"
description = "FastAPI backend for Career Forge — a self-hostable resume and cover letter builder."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wiktor Karbowski" }]

[project.urls]
Homepage = "https://github.com/wkarbowski/career-forge"
Repository = "https://github.com/wkarbowski/career-forge"
"Bug Tracker" = "https://github.com/wkarbowski/career-forge/issues"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false     
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "bleach.*", "tinycss2.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "S104",  # Possible binding to all interfaces — expected for server
    "S603",  # subprocess call — not used
    "S608",  # SQL injection — we use ORM
    "B008",  # Do not perform function calls in argument defaults — needed for Depends()
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
