[project]
name = "career-forge-server"
version = "1.0.0"
description = "FastAPI backend for Career Forge — a self-hostable resume and cover letter builder."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wiktor Karbowski" }]

[project.urls]
Homepage = "https://github.com/wkarbowski/career-forge"
Repository = "https://github.com/wkarbowski/career-forge"
"Bug Tracker" = "https://github.com/wkarbowski/career-forge/issues"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "bleach.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# bcrypt is a C extension that cannot be built in the pre-commit isolated venv;
# redis>=5 ships inline stubs but mypy's isolated env may not resolve them.
module = ["bcrypt", "redis", "redis.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "S104",  # Possible binding to all interfaces — expected for server
    "S603",  # subprocess call — not used
    "S608",  # SQL injection — we use ORM
    "B008",  # Do not perform function calls in argument defaults — needed for Depends()
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501", "F401"]
# Test files: asserts are correct pytest style; hardcoded tokens/passwords are
# fixtures; type-checking imports don't need to move in test modules.
"tests/*" = ["S101", "S105", "S106", "TC002", "TC003"]
# Seed/demo scripts: long content strings, typographic dashes, loose typing are fine.
"scripts/*" = ["E501", "RUF001", "S101", "T20", "TC002"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
